fix: update swagger command and add backward compatibility for swagger-export
